<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsActivity"
    android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:helperText="requried"
        app:helperTextTextColor="@android:color/holo_red_dark"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textPersonName"
            android:hint="@string/name"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:helperText="@string/requried"
        app:helperTextTextColor="@android:color/holo_red_dark"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/nameContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="number"
            android:maxLength="11"
            android:hint="@string/phone_number"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descripitionET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/descripition"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/savebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/descriptionContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="90dp"
        android:text="SAVE"
        android:layout_marginTop="10dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contacts_recyler"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@id/savebtn"
        app:layout_constraintStart_toStartOf="@id/savebtn"
        app:layout_constraintTop_toBottomOf="@id/savebtn"
        />


</androidx.constraintlayout.widget.ConstraintLayout>