<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsDetailsActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/contactTV"
        android:padding="20dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/custom_view_text_upper"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/nameView"
        app:layout_constraintTop_toTopOf="@+id/nameView"
        app:layout_constraintBottom_toBottomOf="@+id/nameView"/>


    <TextView
        android:id="@+id/numberView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneTV"
        android:gravity="start"
        android:padding="20dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/custom_view"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameView" />
    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="@+id/numberView"
        app:layout_constraintTop_toTopOf="@+id/numberView"
        app:layout_constraintBottom_toBottomOf="@+id/numberView"/>

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descriptionTV"
        android:gravity="start"
        android:background="@drawable/custom_view_text_bottom"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingBottom="70dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberView" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/numberView"
        app:layout_constraintStart_toStartOf="@+id/descriptionView"
        android:layout_marginTop="55dp"
        android:textSize="10sp"
        android:paddingStart="15dp"


        />

</androidx.constraintlayout.widget.ConstraintLayout>
